Run a DSL aggregation's sub-plans concurrently
One _search over the DSL Calcite path decomposes into several sub-plans
-- one per aggregation granularity -- and they ran strictly one at a
time: plan N+1 was dispatched only after plan N completed. This runs
them concurrently, behind an opt-in width setting, and fixes the two
things that had to be true first.

ONE new cluster setting:

  dsl.query.max_parallel_sub_plans   how many sub-plans may run at once.
                                     Default 1 -- the sequential path,
                                     so the fan-out is opt-in and
                                     putting it back to 1 is the
                                     rollback, no deploy needed. Hard
                                     maximum 5; a PUT of 6 is a 400.

Only widths 1 and 2 are known-good. The benchmark measured 0 failures in
80 executions at K<=2 and 6 in 120 (5.0%) at K>=3, where a 3-level
aggregation intermittently returns HTTP 500; the mechanism was not
traced. The ceiling is 5 rather than 2 so an operator on a larger
instance can widen without a deploy, and the terms derived from the host
clamp the width down on smaller ones regardless -- but the K>=3 failures
need tracing before anything above 2 belongs in a runbook. Default 1
means no cluster reaches that regime unasked.

Every plan goes through the gate from the start, so the width can reach
n and a 2-plan query -- a 2-level nested aggregation with size: 0, the
common production shape -- runs at width 2. There is one execution shape
and nothing selects it at runtime: holding plan 0 back to warm the data
node's parquet metadata was considered and dropped, because it costs the
first wave and cannot reach width 2 on the shape that matters most.

The width actually used is the minimum of the operator's setting, the
plans available to gate, the engine's fragment-executor budget and the
SEARCH pool -- so a wrong setting narrows the fan-out, never fails a
search. It is not a set