@@ -12,12 +12,15 @@ import org.opensearch.action.ActionRequest;
 import org.opensearch.action.support.ActionFilter;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.service.ClusterService;
+import org.opensearch.common.settings.Setting;
 import org.opensearch.core.action.ActionResponse;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.dsl.action.DslExecuteAction;
 import org.opensearch.dsl.action.SearchActionFilter;
 import org.opensearch.dsl.action.TransportDslExecuteAction;
+import org.opensearch.dsl.settings.DslGateInputs;
+import org.opensearch.dsl.settings.DslQuerySettings;
 import org.opensearch.env.Environment;
 import org.opensearch.env.NodeEnvironment;
 import org.opensearch.plugins.ActionPlugin;
@@ -30,17 +33,22 @@ import org.opensearch.transport.client.node.NodeClient;
 import org.opensearch.watcher.ResourceWatcherService;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
 /**
- * Plugin entry point. Registers {@link SearchActionFilter} to intercept _search requests
- * and {@link TransportDslExecuteAction} to handle DSL-to-Calcite conversion and execution.
+ * Plugin entry point. Registers {@link SearchActionFilter} to intercept _search requests,
+ * {@link TransportDslExecuteAction} to handle DSL-to-Calcite conversion and execution, the
+ * {@link DslQuerySettings} operator knobs, and {@link DslGateInputs}, the reader for the
+ * cross-plugin inputs the sub-plan fan-out decision needs.
  */
 public class DslQueryExecutorPlugin extends Plugin implements ActionPlugin {
 
     private SearchActionFilter searchActionFilter;
+    // Held as well as returned: the holder is a component (injected into TransportDslExecuteAction)
+    // and the field keeps it reachable for a later direct reader, the same way getActionFilters()
+    // below reads searchActionFilter.
+    private DslQuerySettings dslQuerySettings;
 
     /** Creates a new plugin instance. */
     public DslQueryExecutorPlugin() {}
@@ -60,7 +68,18 @@ public class DslQueryExecutorPlugin extends Plugin implements ActionPlugin {
         Supplier<RepositoriesService> repositoriesServiceSupplier
     ) {
         this.searchActionFilter = new SearchActionFilter((NodeClient) client);
-        return Collections.emptyList();
+        // Fan-out additions: the settings holder carries dsl.query.max_parallel_sub_plans, and
+        // DslGateInputs is the only production construction site of the cross-plugin gate-input reader.
+        this.dslQuerySettings = new DslQuerySettings(clusterService);
+        return List.of(dslQuerySettings, new DslGateInputs(clusterService.getClusterSettings()));
+    }
+
+    @Override
+    public List<Setting<?>> getSettings() {
+        // The fan-out width knob has to be registered here or it is unsettable in opensearch.yml, a 400
+        // on _cluster/settings, and unresolvable by key from a sibling plugin's classloader — which is how
+        // DslGateInputs reads the analytics plugins' gate inputs across that boundary.
+        return DslQuerySettings.all();
     }
 
     @Override
